--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>hello-world</title>
+    <link rel="icon" href="<%= BASE_URL %>lcc-logo.png">
+      <meta name="author" content="Lekki Concession Center">
+      <meta name="description" content="Lekki Concession Center">
+      <meta name="keywords" content="Lekki Concession Center, lcc">
+    <title>Lekki Concession Center</title>
   </head>
   <body>
     <noscript>
